--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,5 +24,5 @@ jobs:
         working-directory: terraform
 
       - name: Get API URL
-        run: echo "API URL: $(terraform output api_url)"
+        run: echo "API URL $(terraform output api_url)"
         working-directory: terraform
