add zip in destroy

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -17,6 +17,11 @@ jobs:
         run: terraform init
         working-directory: terraform
 
+      - name: Zip Lambda function
+        run: |
+          cd lambda
+          zip -r ../lambda.zip .
+
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
         working-directory: terraform
