--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -32,7 +34,7 @@ jobs:
           zip -r ../lambda.zip .
 
       - name: Terraform Apply
-        run: TF_LOG=DEBUG terraform apply -auto-approve
+        run: terraform apply -auto-approve # TF_LOG=DEBUG 
         working-directory: terraform
 
       - name: Commit Terraform state
